argo-cd/v3.2.6/test/gatewayapi.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: argocd-issuer
    cert-manager.io/issuer-kind: Issuer
spec:
  gatewayClassName: traefik
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    port: 443
    protocol: HTTPS
    hostname: argocd.kubecy.com
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: argocd-traefik-tls
        namespace: argocd

#---
#apiVersion: gateway.networking.k8s.io/v1
#kind: HTTPRoute
#metadata:
#  name: argocd-http-redirect
#  namespace: argocd
#spec:
#  parentRefs:
#  - name: argocd-gateway
#    namespace: argocd
#    sectionName: http
#  hostnames:
#  - argocd.kubecy.com
#  rules:
#  - matches:
#    - path:
#        type: PathPrefix
#        value: "/"
#    filters:
#    - type: RequestRedirect
#      requestRedirect:
#        scheme: https
#        statusCode: 301

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-https
  namespace: argocd
spec:
  parentRefs:
  - name: argocd-gateway
    namespace: argocd
    sectionName: https
  hostnames:
  - argocd.kubecy.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: argocd-server
      port: 80
